<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/devices"
            android:layout_width="@dimen/tab_size"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/mid"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_tv_devices" />

        <ImageView
            android:id="@+id/left_divider"
            android:layout_width="@dimen/divider_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/vertical_line" />

        <android.support.design.widget.TabLayout
            android:id="@+id/main_tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="45"
            app:tabMode="fixed" />

        <ImageView
            android:id="@+id/right_divider"
            android:layout_width="@dimen/divider_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/vertical_line" />

        <ImageView
            android:id="@+id/keyboard"
            android:layout_width="@dimen/tab_size"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/mid"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_keyboard" />
    </LinearLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_text"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.wezom.kiviremote.views.NoSwipeViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/main_shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/colorBlack"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/main_viewPager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
</android.support.constraint.ConstraintLayout>