<resources>
    <string name="app_name" translatable="false">KIVI Remote</string>

    <string name="open">открыть</string>
    <string name="close">закрыть</string>
    <string name="download">Скачать</string>
    <string name="ok" translatable="false">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="later">Позже</string>
    <string name="rate">Оценить</string>
    <string name="dont_show_anymore">Больше не показывать</string>

    <!--CLIENT SIDE strings-->

    <string name="tutorial_title_I">Спасибо за выбор продукции KIVI!</string>
    <string name="tutorial_title_II">Пульт управления ТВ.</string>
    <string name="tutorial_title_III">Библиотека фильмов</string>
    <string name="tutorial_title_IV">Каналы</string>
    <string name="tutorial_title_V">Закрытие пульта</string>
    <string name="tutorial_desc_I">Добро пожаловать в приложение KIVI Remote 3.0! Давайте проведем краткую экскурсию по основным возможностям</string>
    <string name="tutorial_desc_II">В приложении реализовано 2 типа управления: свайп пульт и курсор. Для переключения между ними нажмите на иконку в правом нижнем углу.</string>
    <string name="tutorial_desc_III">Нажмите на иконку перехода чтобы перейти в библиотеку с более 30 тыс. лицензионных фильмов. Для запуска просто нажмите на понравившийся фильм.</string>
    <string name="tutorial_desc_IV">Мы собрали для Вас самые популярные каналы Украины. Чтобы получить доступ к полному списку каналов нажмите на иконку справа</string>
    <string name="tutorial_desc_V"> Чтобы скрыть пульт или плеер – просто смахните его вниз</string>

    <string name="discovery_connect">Подключиться</string>
    <string name="discovery.in.progress">Идет поиск доступных устройств</string>
    <string name="log_file_attached">Файл с последней ошибкой прикреплен к письму.</string>

    <string name="wrong_input">Для корректной работы приложения необходимо изменить настройки ТВ.\nВ меню \&quot;Метод ввода\&quot; выберите пункт \&quot;KIVI Keyboard\&quot;.
        \n\nПерейти в настройки?</string>
    <string name="close_recommendation" >Уверены, что хотите закрыть фильм?</string>
    <string name="input_text_hint">Введите текст</string>

    <string name="placeholder" translatable="false">placeholdeefwefewfwefwefewfewfwefr</string>
    <string name="unknown_wifi" translatable="false">unknown</string>

    <string name="devices_kivi">Устройства KIVI</string>
    <string name="mine_devices">Мои устройства</string>
    <string name="other_devices">Другие устройства</string>

    <string name="save">Сохранить</string>

    <string name="save_success">Изменения сохранены</string>
    <string name="connected_to">Подключено к сети:</string>

    <string name="app_url" translatable="false">vvvvvvvv</string>

    <string name="playing_now">Сейчас играет</string>

    <string name="open_settings_dialog">Для продолжения необходимо разрешение.\nОткрыть настройки?</string>
    <string name="start_time" translatable="false">00:00:00</string>
    <string name="counter_default" translatable="false">123/123</string>

    <string name="connection_is_lost">Соединение с телевизором прервано</string>

    <string name="return_to_home_screen">вернуться?</string>
    <string name="folder_name" translatable="false">folder name</string>
    <string name="number_of_items" translatable="false">number of items</string>
    <string name="number_of_images">%1$s фото</string>
    <string name="number_of_videos">%1$s видео</string>

    <string name="dark_mode">Темная тема</string>
    <string name="auto_connect">Автоподключение</string>


    <string name="video">Видео</string>
    <string name="audio">Аудио</string>
    <string name="photo">Фото</string>

    <string name="vga" translatable="false">VGA</string>
    <string name="atv" translatable="false">АТВ</string>
    <string name="hdmi" translatable="false">HDMI 1</string>
    <string name="hdmi2" translatable="false">HDMI 2</string>
    <string name="hdmi3" translatable="false">HDMI 3</string>
    <string name="hdmi4" translatable="false">HDMI 4</string>


    <string name="dtv">Телевидение</string>
    <string name="dvi" translatable="false">DVI</string>
    <string name="av" translatable="false">AV</string>
    <string name="ypbpr">Компонент</string>
    <string name="dvbc" translatable="false">DVB-C</string>
    <string name="dvbs" translatable="false">DVB-S</string>
    <string name="if_you_dont_see_your_device" translatable="false">Если вы не видите ваше устройство в списке,\nто убедитесь в том, что оно находится\nв одной сети с вашим телефоном.</string>

    <string name="subscriptions">Подписки</string>
    <string name="select_the_appropriate_subs">Выберите соответствующий\nдля вас срок подписки:</string>
    <string name="to_pay">К оплате:</string>
    <string name="card_number">Номер карты</string>
    <string name="card_validity_period">Период действия карты</string>
    <string name="cvv_code">CVV-код</string>
    <string name="make_payment">Оплатить</string>
    <string name="drawer_close" translatable="false">close menu</string>
    <string name="drawer_open" translatable="false">open menu</string>

    <string name="drawer_support">Поддержка пользователей</string>
    <string name="drawer_exit">Выйти</string>
    <string name="drawer_devices">Устройства</string>

    <string name="downgrade_error">Ой!</string>
    <string name="downgrade_description">Кажется, Вы используете версию KIVI Remote, которая не подходит для данного ТВ. Установить подходящую версию?</string>
    <string name="rating_description">Оцените, пожалуйста, наше приложение.</string>
    <string name="recom_chennel">Телеканалы</string>
    <string name="recom_apps">Приложения</string>
    <string name="recom_inputs">Входы</string>
    <string name="recom_kivi">Рекомендации от Киви</string>

    <string name="not_found_anything_by_query">По вашему запросу\nничего не найдено</string>
    <string name="not_found_any_episodes__by_query">Серии для этого сезона\nнедоступны</string>

    <string name="movies_toolbar_tittle">Фильмы</string>
    <string name="search_movies">Искать фильмы</string>
    <string name="apply_filters">Применить фильтры</string>
    <string name="reset_filters">Сбросить фильтры</string>

    <!--sort-->
    <string name="by_popularity">По популярности</string>
    <string name="by_appearance_date">Дата появления</string>
    <string name="by_rating_ivi">Рейтинг IVI</string>
    <string name="by_rating_imdb">Рейтинг IMDB</string>
    <string name="by_budget">Бюджет</string>
    <string name="by_worldwide_fees">Сборы в мире</string>
    <string name="by_release_year">Год выхода</string>

    <!--filter-->
    <string name="by_year">Год</string>
    <string name="by_category">Категория</string>
    <string name="by_genre">Жанр</string>
    <string name="by_country">Страна</string>
    <string name="skip">Пропустить</string>
    <string name="start_using">Начать использование</string>

</resources>